--- a/src/2-3-diffrules.tex
+++ b/src/2-3-diffrules.tex
@@ -92,13 +92,13 @@
   \end{theorem}
   \begin{proof}
     \[
-      \dfrac{d}{dx} \dfrac{1}{f(x)} = \lim_{h \to 0} \frac{\frac{1}{f(x+h)}-\frac{1}{f(x)}}{h} = \lim_{h \to 0} \dfrac{-1}{f(x+h) f(x)} \lim_{h \to 0} \dfrac{f(x+h)-f(x)}{h}
+      \dfrac{d}{dx} \dfrac{1}{f(x)} = \lim_{h \to 0} \frac{\dfrac{1}{f(x+h)}-\dfrac{1}{f(x)}}{h} = \lim_{h \to 0} \dfrac{-1}{f(x+h) f(x)} \lim_{h \to 0} \dfrac{f(x+h)-f(x)}{h}
     \]
     The result follows by limit rules and continuity of $f$.
   \end{proof}
 
   \begin{example}
-    Differentiate $y = \dfrac{1}{x^{2/3} + 1}$
+    Differentiate $y = \dfrac{x^5}{x^{2/3} + 1}$.
   \end{example}
 
   \begin{theorem}
