--- a/main.tex
+++ b/main.tex
@@ -57,16 +57,16 @@
     \subfile{src/2-2-derivative}
     \section{Differentiation Rules}
     \subfile{src/2-3-diffrules}
-    % \section{Chain Rule}
-    % \subfile{src/2-4-chain}
-%     \section{Derivatives of Trigonometric Functions}
-%     \subfile{src/2-5-trig}
-%     \section{Higher Order Derivatives}
-%     \subfile{src/2-6-higher}
-%     \section{Mean Value Theorem}
-%     \subfile{src/2-8-mean}
-%     \section{Implicit Differentiation}
-%     \subfile{src/2-9-implicit}
+    \section{Chain Rule}
+    \subfile{src/2-4-chain}
+    \section{Derivatives of Trigonometric Functions}
+    \subfile{src/2-5-trig}
+    \section{Higher Order Derivatives}
+    \subfile{src/2-6-higher}
+    \section{Mean Value Theorem}
+    \subfile{src/2-8-mean}
+    % \section{Implicit Differentiation}
+    % \subfile{src/2-9-implicit}
 %     \section{Antiderivatives}
 %     \subfile{src/2-10-antider}
 
@@ -78,3 +78,4 @@
 %     \section{The Natural Logarithm and Exponential}
 %     \subfile{src/3-3-naturallog}
 \end{document}
+
